--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div class="row">
             <div class="col-lg-8 col-md-12 mx-auto">
               <p class="italic">Oh, hello, nice to meet you!</p>
-              <h1>I am B&amp;W Landing page or portfolio Theme.</h1>
-              <p class="italic">I am a ready to be your portfolio, telling your stories and short presentations.</p>
+              <h1>欢迎来到张小康的主页</h1>
+              <p class="italic">You cannot improve your past, but you can improve your future. Once time is wasted, life is wasted.</p>
             </div>
           </div>
         </div>
@@ -52,8 +52,8 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a href="#intro" class="nav-link link-scroll">Home</a></li>
               <li class="nav-item"><a href="#about" class="nav-link link-scroll">About </a></li>
-              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Services</a></li>
-              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Portfolio</a></li>
+              <li class="nav-item"><a href="#services" class="nav-link link-scroll">Skill</a></li>
+              <li class="nav-item"><a href="#portfolio" class="nav-link link-scroll">Scenery</a></li>
               <li class="nav-item"><a href="#text" class="nav-link link-scroll">Text</a></li>
               
             </ul>
@@ -67,9 +67,9 @@
         <div class="row">
           <div class="col-lg-6">
             <h2 class="heading">About me</h2>
-            <p class="lead">This can be an about section.</p>
-            <p>Impossible considered invitation him men instrument saw celebrated unpleasant. Put rest and must set kind next many near nay. He exquisite continued explained middleton am. Voice hours young woody has she think equal. Estate moment he at on wonder at season little. Six garden result summer set family esteem nay estate. End admiration mrs unreserved discovered comparison especially invitation. </p>
-            <p>Delightful unreserved impossible few estimating men favourable see entreaties. She propriety immediate was improving. He or entrance humoured likewise moderate. Much nor game son say feel. Fat make met can must form into gate. Me we offending prevailed discovery. </p>
+            <p class="lead">这或许只是我的一部分</p>
+            <p>曾有人说“少年不知愁滋味，爱上层楼。”而谁又能理解少年也有“却道天凉好个秋”的忧伤无奈呢?有人理解的：没有人不曾经是少年。只是或许，在那段最令人不堪的岁月走过之后，便渐渐沉于浮华，渐渐被人淡忘了。</p>
+            <p>在成长的路上，本人喜欢追求新的技术，也许太急于求成，总是妄自菲薄，常常出现难以预科的结果。这也许与我的性格有关，沉默寡言，让我看清这世界的点滴。</p>
           </div>
           <div class="col-lg-5 mx-auto">
             <p><img src="img/japan-mountains.jpg" alt="" class="img-fluid rounded-circle"></p>
@@ -83,27 +83,27 @@
       <div class="container">
         <div class="row services">
           <div class="col-lg-12">
-            <h2 class="heading">Services</h2>
+            <h2 class="heading">Skill</h2>
             <div class="row">
               <div class="col-md-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-desktop"></i></div>
-                  <h5>Webdesign</h5>
-                  <p>Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                  <h5>Computer</h5>
+                  <p>这是我受首先接触到的,主要是前端领域(Javascrip)，同时还学习到了PHP基础主要是与ajax交互使用</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-print"></i></div>
-                  <h5>Print</h5>
-                  <p>Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                  <div class="icon"><i class="fa fa-medkit"></i></div>
+                  <h5>Animal Medicine</h5>
+                  <p>刚开始接触动物医学基础,了解了药物种类,微生物生态,动物病理现象</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="box">
-                  <div class="icon"><i class="fa fa-globe"></i></div>
-                  <h5>SEO and SEM</h5>
-                  <p>Am terminated it excellence invitation projection as. She graceful shy. </p>
+                  <div class="icon"><i class="fa fa-graduation-cap"></i></div>
+                  <h5>Education</h5>
+                  <p>本科学历,专业为动物医学,在校表现良好。拥有学位证等证书</p>
                 </div>
               </div>
             </div>
@@ -120,8 +120,8 @@
           <div class="col-lg-12">
             <div class="row">
               <div class="col-md-12 col-lg-8">
-                <h2 class="heading">Portfolio</h2>
-                <p>Put your portfolio or gallery images here for example. Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
+                <h2 class="heading">Scenery</h2>
+                <p>请不要说所有的美都在春天里也不要说只有年青人才能有爱诚然，这是一年中最为靓丽的风景诚然，那是一生中激情燃烧的岁月可是，你是否想过那些曾经绽放过的花朵倘若没有炽热的夏天倘若没有金色的秋天就没有那沉甸甸的收成我喜欢一年四季我也喜欢欢乐的童年我也赞美青春我对壮年…</p>
               </div>
             </div>
             <div class="row">
@@ -168,15 +168,27 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="heading">Text page</h2>
+            <h2 class="heading">ELISA PAGE</h2>
             <div class="row">
               <div class="col-md-6">
-                <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh. </p>
-                <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other. </p>
+                <p>1971年Engvall和Perlmann发表了酶联免疫吸附剂测定（enzyme linked immunosorbent assay，ELISA）用于IgG定量测定的文章，使得1966年开始用于抗原定位的酶标抗体技术发展成液体标本中微量物质的测定方法。这一方法的基本原理是： </p>
+                <p>①使抗原或抗体结合到某种固相载体表面，并保持其免疫活性。②使抗原或抗体与某种酶连接成酶标抗原或抗体，这种酶标抗原或抗体既保留其免疫活性，又保留酶的活性。在测定时，把受检标本（测定其中的抗体或抗原）和酶标抗原或抗体按不同的步骤与固相载体表面的抗原或抗体起反应。用洗涤的方法使固相载体上形成的抗原抗体复合物与其他物质分开，最后结合在固相载体上的酶量与标本中受检物质的量成一定的比例。加入酶反应的底物后，底物被酶催化变为有色产物，产物的量与标本中受检物质的量直接相关，故可根据颜色反应的深浅有无定性或定量分析。由于酶的催化效率很高，故可极大地放大反应效果，从而使测定方法达到很高的敏感度。
+ </p>
               </div>
               <div class="col-md-6">
-                <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed. </p>
-                <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail. </p>
+                <p><span style="color:red">夹心法</span> &nbsp&nbsp
+夹心法常用于检测大分子抗原，一般的操作步骤为：
+将具有专一性的抗体固著（coating）于塑胶孔盘上，完成后洗去多余抗体；
+加入待测检体，检体中若含有待测的抗原，则其会与塑胶孔盘上的抗体进行专一性键结；
+洗去多余待测检体，加入另一种对抗原专一的一次抗体，与待测抗原进行键结；
+洗去多余未键结一次抗体，加入带有酶的二次抗体，与一次抗体键结；
+洗去多余未键结二次抗体，加入酶底物使酵素呈色，以肉眼或仪器读取呈色结果。</p>
+                <p><span style="color:red">间接法 </span>&nbsp&nbsp
+间接法常用于检测抗体，一般的操作步骤为：
+将已知的抗原固著于塑胶孔盘上，完成后洗去多余的抗原；
+加入待测检体，检体中若含有待测的一次抗体，则其会与塑胶孔盘上的抗原进行专一性键结；
+洗去多余待测检体，加入带有酶的二次抗体，与待测的一次抗体键结；
+洗去多余未键结二次抗体，加入酶底物使酶呈色，藉仪器（ELISA reader）测定塑胶盘中的吸光值（OD值），以评估有色终产物的含量即可测量待测抗体的含量。</p>
               </div>
             </div>
           </div>
