--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
             <h2 class="heading">About me</h2>
             <p class="lead">这或许只是我的一部分</p>
             <p>曾有人说“少年不知愁滋味，爱上层楼。”而谁又能理解少年也有“却道天凉好个秋”的忧伤无奈呢?有人理解的：没有人不曾经是少年。只是或许，在那段最令人不堪的岁月走过之后，便渐渐沉于浮华，渐渐被人淡忘了。</p>
-            <p>在成长的路上，本人喜欢追求新的技术，也许太急于求成，总是妄自菲薄，常常出现难以预料的结果。这也许与我的性格有关，沉默寡言，让我看清这世界的点滴。</p>
+            <p>五年的大学生活，让我学到了很多，很多的实践让我从各个方面提高了自己,不但让我学会了如何思考,学习的方法，还让我看到了实践的重要性,作为一名学生，我深知学习机会的不易，我学习很努力，拿到学校的奖学金和三好学生的称号,当然在学习的过程中也暴露出了我自己的很多缺点，这一点我心怀感激，因它使我更全面的了解了我自己，使我在工作学习中能够取长补短，不断进步。</p>
+<p>我是个勤奋，脚踏实地的人，并不是很聪慧,却是一个地地道道
+的实干者。确定目标之后会为自己制定一系列计划，并按照计划一步一个脚印走下去，直到实现自己的
+目标。积极乐观，不抛弃，不放弃，我的信条。我个人的兴趣爱好也十分广泛，读书、打羽毛球、慢
+跑、听音乐、动物医学的生涯是有些枯燥无味，正是有了这一些娱乐活动，让我懂得在忙
+碌中放松,在压力中释放,在学习中更好的生活。</p>
+<p>最后，我想谈一下我考研的原因。虽然我在之前学习过计算机的相关知识，后来跨专业来到了动物医学，在我2年的学习当中，我很渴望把计算机所学来解决动物医学当中的问题，把这两个学科结合在一起，我也有许多想法，可能并不成熟这也许就是为了我选报这个专业奠定了坚实的基础。我很喜欢学校的感觉和体现出来的学习氛围，到处充满着青春活动，有很多的机会让我去实践和尝试，让人可以深入思考和进行学术的研究。如果这次能够在我梦寐以求的大学深造，我会一 定烬自己最大的努力学习，为未来的3年的事业打下坚实的基础。</p>
           </div>
           <div class="col-lg-5 mx-auto">
             <p><img src="img/japan-mountains.jpg" alt="" class="img-fluid rounded-circle"></p>
@@ -89,21 +95,21 @@
                 <div class="box">
                   <div class="icon"><i class="fa fa-desktop"></i></div>
                   <h5>Computer</h5>
-                  <p>这是我首先接触到的,主要是前端领域(Javascrip)，同时还学习到了PHP基础主要是与ajax交互使用</p>
+                  <p>这是我首先接触到的,主要是前端领域(Javascrip)，同时还学习到了PHP基础主要是与ajax交互使用，唯一遗憾的是没有涉及到前端的三大框架,对于计算机也许还有很长的路要走...</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-medkit"></i></div>
                   <h5>Animal Medicine</h5>
-                  <p>刚开始接触动物医学基础,了解了药物种类,微生物生态,动物病理现象</p>
+                  <p>系统学习了动物医学专业知识，顺利通过完成学科教育及考试,了解了药物种类,微生物生态,动物病理变化，动物性疾病特征及防治和临床诊断.曾探究过微波辅助法对果渣当中果胶提取的影响因素的试验分析，曾和小组成员一起完成多次课程安排的实验...</p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="box">
                   <div class="icon"><i class="fa fa-graduation-cap"></i></div>
                   <h5>Education</h5>
-                  <p>本科学历,专业为动物医学,在校表现良好。拥有学位证等证书</p>
+                  <p>本科学历,专业为动物医学,与老师相处融洽，在校表现良好。曾获得过三好学生，二等学业奖学金</p>
                 </div>
               </div>
             </div>
@@ -189,7 +195,7 @@
 加入待测检体，检体中若含有待测的一次抗体，则其会与塑胶孔盘上的抗原进行专一性键结；
 洗去多余待测检体，加入带有酶的二次抗体，与待测的一次抗体键结；
 洗去多余未键结二次抗体，加入酶底物使酶呈色，藉仪器（ELISA reader）测定塑胶盘中的吸光值（OD值），以评估有色终产物的含量即可测量待测抗体的含量。</p>
-<p><span style="color:red">应用</span>&nbsp&nbsp  1、微波-ELISA二步法检测乙肝标志物在工厂体检中的应用方法:对1128份做HBsAg和HBeAg检查的工厂体检标本,对照常规ELISA法,做微波-ELISA二步法检测;并对HBsAg阳性结果复查.结果:ELISA法有119份HBsAg阳性,32份HBeAg阳性;微波法有122份HBsAg阳性,34份HBeAg阳性;HBsAg阳性结果经胶体金HBsAg快速检测纸条检测均为阳性.结论:微波-ELISA二步法检测乙肝标志物具有时间短、操作简便,灵敏度高等特点,用二步法进行检测,可减少HOOK现象,可用于检测HBsAg和HBeAg的大量工厂体检中,能加快出报告时间,大大提高工作效率. 2、胶体金标法与酶联免疫吸附法检测乙型肝炎五项的结果对比目的:对胶体金标检测(GICA)法与酶联免疫吸附试验(ELISA)法检测乙肝病毒5项标志物的敏感性、特异性和阳性检出率对比.方法:采用两种方法分别对536例临床血清标本进行HBsAg、HBeAg、HBeAb、HBcAg、HBsAb 5项血清标志物进行检测,并将HBsAg、HBcAb两份质控血清作不同倍数的稀释,用两种方法检测.结果:TRFIA法检测的敏感性、特异性均高于ELISA法检测.结论:GICA法操作简便、快速,检测的特异度较好,但其灵敏度有限;乙肝病毒5项血清学标志物ELISA法检测更适合于临床诊治的应用,在临床乙肝早期诊断和疗效的观察等方面,具有一定的临床意义.3、磺胺类药物残留ELISA快速检测试剂盒的研制:本研究通过单克隆抗体的纯化，直接竞争ELISA方法的确立，样品提取方法的优化，直接竞争ELISA标准曲线的建立，动物试验以及与国外同类试剂盒和仪器方法的比较，建立了检测食源性动物产品中磺胺嘧啶和磺胺类药物残留的两种ELISA检测方法，并在此基础上相应地研制出两个快速检测试剂盒。研究结果如下： 1、利用本实验室已有的抗磺胺嘧啶单克隆抗体细胞株(SD-4)经复苏、筛选、生产、纯化得到抗磺胺嘧啶单克隆抗体。用重氮化—偶联法将磺胺嘧啶(SD)与卵清白蛋白(OVA)按投料摩尔比2:1连接制备了包被抗原(SD-OVA)，用过碘酸钠法将SD-OVA与辣根过氧化物酶(HRP)按投料摩尔比1:2连接制备了酶标抗原(SD-OVA-HRP)。药物竞争试验确定了直接竞争ELISA方法；将常规包被与微波包被法从方法的灵敏度、包被时间、包被稳定性进行比较，确立微波包被法。</p>
+
               </div>
             </div>
           </div>
