--- a/index.html
+++ b/index.html
@@ -69,13 +69,9 @@
             <h2 class="heading">About me</h2>
             <p class="lead">这或许只是我的一部分</p>
             <p>曾有人说“少年不知愁滋味，爱上层楼。”而谁又能理解少年也有“却道天凉好个秋”的忧伤无奈呢?有人理解的：没有人不曾经是少年。只是或许，在那段最令人不堪的岁月走过之后，便渐渐沉于浮华，渐渐被人淡忘了。</p>
-            <p>五年的大学生活，让我学到了很多，很多的实践让我从各个方面提高了自己,不但让我学会了如何思考,学习的方法，还让我看到了实践的重要性,作为一名学生，我深知学习机会的不易，我学习很努力，拿到学校的奖学金和三好学生的称号,当然在学习的过程中也暴露出了我自己的很多缺点，这一点我心怀感激，因它使我更全面的了解了我自己，使我在工作学习中能够取长补短，不断进步。</p>
-<p>我是个勤奋，脚踏实地的人，并不是很聪慧,却是一个地地道道
-的实干者。确定目标之后会为自己制定一系列计划，并按照计划一步一个脚印走下去，直到实现自己的
-目标。积极乐观，不抛弃，不放弃，我的信条。我个人的兴趣爱好也十分广泛，读书、打羽毛球、慢
-跑、听音乐、动物医学的生涯是有些枯燥无味，正是有了这一些娱乐活动，让我懂得在忙
-碌中放松,在压力中释放,在学习中更好的生活。</p>
-<p>最后，我想谈一下我考研的原因。虽然我在之前学习过计算机的相关知识，后来跨专业来到了动物医学，在我2年的学习当中，我很渴望把计算机所学来解决动物医学当中的问题，把这两个学科结合在一起，我也有许多想法，可能并不成熟这也许就是为了我选报这个专业奠定了坚实的基础。我很喜欢学校的感觉和体现出来的学习氛围，到处充满着青春活动，有很多的机会让我去实践和尝试，让人可以深入思考和进行学术的研究。如果这次能够在我梦寐以求的大学深造，我会一 定烬自己最大的努力学习，为未来的3年的事业打下坚实的基础。</p>
+            <p>人总要慢慢成熟，将这个浮华的世界看得更清楚，看穿伪装的真实，看清隐匿的虚假，很多原本相信的事便不再相信。但是，要去相信，相信这个世界里美好总要多过阴暗，欢乐总要多苦难，还有很多事，值得你一如既往的相信。</p>
+<p>进步和成长的过程总是有许多的困难与坎坷的。有时我们是由于志向不明，没有明确的目的而碌碌无为。但是还有另外一种情况，是由于我们自己的退缩，与自己“亲密”的妥协没有坚持到底的意志，才使得机会逝去，颗粒无收。</p>
+<p>越长大越明白，该来的让它来，该走得让它走，不强求，也不强留，不着急，也不抱怨，就看时间会给我们什么样的答案，或许答案也并不重要，看淡了就没什么是最重要的了，哪怕人忘齿寒。</p>
           </div>
           <div class="col-lg-5 mx-auto">
             <p><img src="img/japan-mountains.jpg" alt="" class="img-fluid rounded-circle"></p>
